# NeonGuard

./: .clang-tidy  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  CMakeLists.upstream.txt  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  INCLUSION.md  LICENSE  NOTICE  README.md  SBOM.cdx.json  SECURITY.md  SUSTAINABILITY.md
.devcontainer/: devcontainer.json
ci/: CMakeLists.txt
ci/include/neonsec/: core.hpp
ci/src/: core.cpp  main.cpp
ci/tests/: smoke.cpp
legacy/previous_apex/: ACCESSIBILITY.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ETHICS.md  GOVERNANCE.md  LICENSE  MARKETING.md  README.md  SBOM.cdx.json  SECURITY.md
legacy/previous_apex/contrib/completions/: neonsec.bash  neonsec.fish  neonsec.zsh
legacy/previous_apex/docs/: API.md  ARCHITECTURE.md  AUDIT_CHECKLIST.md  PRIVACY.md  RELEASE_SIGNING.md  RELEASE_VERIFICATION.md  REPRODUCIBILITY.md  RISK_REGISTER.md  SECURITY_RUNBOOK.md  THREAT_MODEL.md  WHITEPAPER.md
legacy/previous_apex/fuzz/: fuzz_ndjson.cpp
legacy/previous_apex/include/neonsec/: csv_reader.hpp  detectors.hpp  log.hpp  rules.hpp  window.hpp
legacy/previous_apex/legacy/previous_ultra/: .editorconfig  ACCESSIBILITY.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  Dockerfile  ETHICS.md  GOVERNANCE.md  INCLUSION.md  LICENSE  MARKETING.md  README.md  RELEASE.md  ROADMAP.md  SBOM.cdx.json  SECURITY.md  SUSTAINABILITY.md  docker-compose.yml
legacy/previous_apex/legacy/previous_ultra/.devcontainer/: devcontainer.json
legacy/previous_apex/legacy/previous_ultra/contrib/completions/: neonsec.bash  neonsec.fish  neonsec.zsh
legacy/previous_apex/legacy/previous_ultra/docs/: ARCHITECTURE.md  AUDIT_CHECKLIST.md  PRIVACY.md  RELEASE_SIGNING.md  RELEASE_VERIFICATION.md  REPRODUCIBILITY.md  RISK_REGISTER.md  SECURITY_RUNBOOK.md  THREAT_MODEL.md  WHITEPAPER.md
legacy/previous_apex/legacy/previous_ultra/examples/: sample.ndjson
legacy/previous_apex/legacy/previous_ultra/include/neonsec/: log.hpp  metrics_server.hpp  ndjson_reader.hpp  plugin_loader.hpp  reporters.hpp  window.hpp
legacy/previous_apex/legacy/previous_ultra/legacy/previous_max/: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  README.md  SBOM.cdx.json  SECURITY.md  docker-compose.yml
legacy/previous_apex/legacy/previous_ultra/legacy/previous_max/.devcontainer/: devcontainer.json
legacy/previous_apex/legacy/previous_ultra/legacy/previous_max/contrib/completions/: neonsec.bash  neonsec.fish  neonsec.zsh
legacy/previous_apex/legacy/previous_ultra/legacy/previous_max/docs/: ARCHITECTURE.md  PRIVACY.md  RELEASE_VERIFICATION.md  REPRODUCIBILITY.md  THREAT_MODEL.md  WHITEPAPER.md
legacy/previous_apex/legacy/previous_ultra/legacy/previous_max/include/neonsec/: bounded_queue.hpp  csv_reader.hpp  detectors.hpp  log.hpp  metrics_server.hpp  reporters.hpp  rules.hpp  window.hpp
legacy/previous_apex/legacy/previous_ultra/legacy/previous_max/legacy/previous_final/: CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO  GOVERNANCE.md  README.md  RELEASE.md  ROADMAP.md  SBOM.cdx.json  SECURITY.md  docker-compose.yml
legacy/previous_apex/legacy/previous_ultra/legacy/previous_max/legacy/previous_final/.devcontainer/: devcontainer.json
legacy/previous_apex/legacy/previous_ultra/legacy/previous_max/legacy/previous_final/docs/: ARCHITECTURE.md  AUDIT_CHECKLIST.md  THREAT_MODEL.md  WHITEPAPER.md
legacy/previous_apex/legacy/previous_ultra/legacy/previous_max/legacy/previous_final/examples/: sample.csv
legacy/previous_apex/legacy/previous_ultra/legacy/previous_max/legacy/previous_final/include/neonsec/: csv_reader.hpp  detectors.hpp  log.hpp  reporters.hpp  rules.hpp  window.hpp
legacy/previous_apex/legacy/previous_ultra/legacy/previous_max/legacy/previous_final/legacy/original_project/: .editorconfig  .pre-commit-config.yaml  ACCESSIBILITY_STATEMENT.md  CHANGELOG.md  CHECKSUMS.sha256  CITATION.cff  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  COMMUNITY.md  COMPLIANCE.md  COMPLIANCE_CHECKLIST.md  CONTRIBUTING.md  CONVENTIONS.md  DATA_CLASSIFICATION.md  DCO.md  Dockerfile  Doxyfile  ETHICAL_GUIDELINES.md  GOVERNANCE.md  MAINTAINERS.md  MAINTENANCE_SLA.md  MARKETING.md  Makefile  NOTICE  README.md  RELEASE.md  REPRODUCIBLE_BUILDS.md  RETENTION_POLICY.md  RISK_REGISTER.md  ROADMAP.md  RUNBOOK.md  SCHEMA_EXAMPLE.txt  SECURITY.md  SUPPORT.md  SUPPRESSION.md  SUSTAINABILITY.md  THIRD_PARTY_LICENSES.md  VULNERABILITY_DISCLOSURE.md  WHITEPAPER.md  (+5 more)
legacy/previous_apex/legacy/previous_ultra/legacy/previous_max/legacy/previous_final/legacy/original_project/.devcontainer/: devcontainer.json
legacy/previous_apex/legacy/previous_ultra/legacy/previous_max/legacy/previous_final/src/: csv_reader.cpp  detectors.cpp  log.cpp  main.cpp  reporters.cpp  rules.cpp  window.cpp
legacy/previous_apex/legacy/previous_ultra/legacy/previous_max/legacy/previous_final/tests/: test_csv.cpp  test_detectors.cpp
legacy/previous_apex/legacy/previous_ultra/legacy/previous_max/src/: bounded_queue.cpp  main.cpp  metrics_server.cpp  plugin_loader.cpp  reporters.cpp
legacy/previous_apex/legacy/previous_ultra/legacy/previous_max/tests/: test_detectors.cpp
legacy/previous_apex/legacy/previous_ultra/legacy/previous_max/tools/: verify_release.py
legacy/previous_apex/legacy/previous_ultra/plugins/pcap_ingest/: plugin_pcap.cpp
legacy/previous_apex/legacy/previous_ultra/press/: BRAND_GUIDE.md
legacy/previous_apex/legacy/previous_ultra/src/: detectors.cpp  log.cpp  main.cpp  metrics_server.cpp  rules.cpp  window.cpp
legacy/previous_apex/legacy/previous_ultra/tests/: test_csv.cpp
legacy/previous_apex/legacy/previous_ultra/tools/: verify_release.py
legacy/previous_apex/plugins/pcap_ingest/: plugin_pcap.cpp
legacy/previous_apex/press/: BRAND_GUIDE.md
legacy/previous_apex/src/: csv_reader.cpp  main.cpp  metrics_server.cpp  ndjson_reader.cpp
legacy/previous_apex/tests/: test_detectors.cpp  test_ndjson.cpp
legacy/previous_apex/tools/: verify_release.py
(+168 files in other folders)
