cmake_minimum_required(VERSION 3.23)
project(neonsec_fuzzers LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
if (MSVC)
  message(STATUS "Fuzzers disabled on MSVC")
  return()
endif()
add_executable(fuzz_ndjson fuzz_ndjson.cpp)
target_include_directories(fuzz_ndjson PRIVATE ${CMAKE_CURRENT_LIST_DIR}/../include)
target_link_libraries(fuzz_ndjson PRIVATE neonsec)
target_compile_options(fuzz_ndjson PRIVATE -fsanitize=fuzzer,address,undefined)
target_link_options(fuzz_ndjson PRIVATE -fsanitize=fuzzer,address,undefined)
add_executable(fuzz_csv fuzz_csv.cpp)
target_include_directories(fuzz_csv PRIVATE ${CMAKE_CURRENT_LIST_DIR}/../include)
target_link_libraries(fuzz_csv PRIVATE neonsec)
target_compile_options(fuzz_csv PRIVATE -fsanitize=fuzzer,address,undefined)
target_link_options(fuzz_csv PRIVATE -fsanitize=fuzzer,address,undefined)
